Fix non-visible forms and select width in mobile

--- a/src/components/FightResult/styles.css
+++ b/src/components/FightResult/styles.css
@@ -38,6 +38,7 @@
   bottom: 0;
   left: 0;
   backdrop-filter: blur(20px);
+  background-color: rgba(91, 153, 194, 0.2);
   font-size: 1.5rem;
 }
 
