--- a/src/components/RivalForm/styles.css
+++ b/src/components/RivalForm/styles.css
@@ -18,7 +18,7 @@
 .form__button,
 .form__input {
   background-color: #2f2f2f;
-  width: 45%;
+  width: 11rem;
   text-align: center;
   color: white;
   font-size: 1rem;
