--- a/src/pages/home/styles.css
+++ b/src/pages/home/styles.css
@@ -6,6 +6,8 @@ body {
   margin: 0;
   color: white;
   background-color: #1b1b1b;
+  width: 100vw;
+  height: 100vh;
   /* TODO: Add CSS variables*/
 }
 
